# ray-tracing-in-one-weekend

./: .gitignore  LICENSE  Makefile  README.md  compile_commands.json  makefile
include/: camera.hpp  color.hpp  hittable.hpp  hittable_list.h  hittable_list.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
src/: CMakeLists.txt  camera.cpp  color.cpp  hittable_list.cpp  main.cpp  ray.cpp  rtweekend.cpp  sphere.cpp  vec3.cpp
src/include/: color.hpp  hittable.hpp  hittable_list.hpp  ray.h  ray.hpp  vec3.h  vec3.hpp
